<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="cm.trixobase.sharenda.domain.activity.PolicyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/my_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="15dp">

            <TextView
                style="@style/TitlePolicy"
                android:layout_width="@dimen/width_layout_title_policy"
                android:layout_height="wrap_content"
                android:text="@string/text_title_personal_data" />

            <TextView
                style="@style/TextPolicy"
                android:layout_width="@dimen/width_layout_text_policy"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/text_personal_data" />

            <TextView
                style="@style/TitlePolicy"
                android:layout_width="@dimen/width_layout_title_policy"
                android:layout_height="wrap_content"
                android:text="@string/text_title_personal_data_process" />

            <TextView
                style="@style/TextPolicy"
                android:layout_width="@dimen/width_layout_text_policy"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/text_personal_data_process" />

            <TextView
                style="@style/TitlePolicy"
                android:layout_width="@dimen/width_layout_title_policy"
                android:layout_height="wrap_content"
                android:text="@string/text_title_data_collect" />

            <TextView
                style="@style/TextPolicy"
                android:layout_width="@dimen/width_layout_text_policy"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/text_data_collected" />

            <TextView
                style="@style/TitlePolicy"
                android:layout_width="@dimen/width_layout_title_policy"
                android:layout_height="wrap_content"
                android:text="@string/text_title_data_retention_time" />

            <TextView
                style="@style/TextPolicy"
                android:layout_width="@dimen/width_layout_text_policy"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/text_data_retention_time" />

            <TextView
                style="@style/TitlePolicy"
                android:layout_width="@dimen/width_layout_title_policy"
                android:layout_height="wrap_content"
                android:text="@string/text_title_right_permissions" />

            <TextView
                style="@style/TextPolicy"
                android:layout_width="@dimen/width_layout_text_policy"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/text_right_permissions" />

            <TextView
                style="@style/TitlePolicy"
                android:layout_width="@dimen/width_layout_title_policy"
                android:layout_height="wrap_content"
                android:text="@string/text_title_right_access" />

            <TextView
                style="@style/TextPolicy"
                android:layout_width="@dimen/width_layout_text_policy"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/text_right_access" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

