<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout_Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_logo_id"
        android:layout_width="@dimen/first_width_size_icon"
        android:layout_height="@dimen/first_height_size_icon"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/sharenda_logo_description"/>

    <TextView
        android:id="@+id/textView_welcome_id2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView_logo_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/message_welcome_on_app"
        android:textAppearance="@style/TextView_TunedText_Splash"
        android:textSize="@dimen/sharenda_title"
        android:cropToPadding="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_policy_link"
        android:layout_centerHorizontal="true"
        android:fontFamily="inconsolata"
        android:gravity="center"
        android:text="@string/message_policy"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_policy_link"
        android:layout_width="@dimen/width_label_policy"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_continue_id"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/message_policy_link"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:clickable="true"
        android:onClick="goToPolicyActivity"
        android:focusable="true" />

    <Button
        android:id="@+id/button_continue_id"
        style="@style/Button"
        android:text="@string/text_continue" />

</RelativeLayout>